# final_project386

./: .gitignore  Documentation.qmd  MANIFEST.in  README.md  TechnicalReport.qmd  Tutorial.qmd  _quarto.yml  custom.scss  index.qmd  pyproject.toml
docs/: Documentation.html  TechnicalReport.html  Tutorial.html  index.html  search.json
docs/site_libs/bootstrap/: bootstrap-409dfb5c0e5108e9e5736a66dc2c05e7.min.css
docs/src/final_project_demo/: final.html
src/final_project_demo/: .final.ipynb.icloud  __init__.py  analysis.py  cleaning.py  final.ipynb  streamlit_app.py
