[build-system]
requires = ["uv_build >= 0.9.5, <0.10.0"]
build-backend = "uv_build"

[project]
name = "final-project-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.194.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "kaggle>=2.0.1",
    "kagglehub>=1.0.0",
    "load-dotenv>=0.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.40.0",
]
